--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ vignettes/*.pdf
 /figures/pathways_analysis
 /figures/sig_sig_analysis
 /figures/sig_sig_interactions
+/tmp
 
 # Temporary files created by R markdown
 *.utf8.md
