--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ vignettes/*.pdf
 /figures/sig_sig_analysis
 /figures/sig_sig_interactions
 /tmp
+/posters
 
 # Temporary files created by R markdown
 *.utf8.md
